modify build error

--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@sendgrid/mail": "^7.7.0",
-    "cjs": "^0.0.11",
     "microcms-js-sdk": "^2.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^5.3.3"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@chakra-ui/react": "^2.2.9",
